canary-demo/blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-canary-blackbox
  namespace: rollouts-canary-demo
  labels:
    app: rollouts-canary-blackbox
spec:
  selector:
    app: rollouts-canary-blackbox
  ports:
    - name: http
      port: 9115
      targetPort: http
