canary-demo/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-canary-demo-canary
  namespace: rollouts-canary-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: rollouts-canary-demo
