canary-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-canary-demo
  namespace: rollouts-canary-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: rollouts-canary-demo
